# aws-iam-authentication-example

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
openspec/changes/archive/2026-02-04-aws-connectivity-test-service/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-04-aws-connectivity-test-service/specs/aws-msk-iam-consumer/: spec.md
openspec/changes/archive/2026-02-04-aws-connectivity-test-service/specs/connectivity-test-helm/: spec.md
openspec/changes/archive/2026-02-04-aws-connectivity-test-service/specs/connectivity-test-orchestrator/: spec.md
openspec/specs/openai-embeddings-client/: spec.md
openspec/specs/opensearch-vector-writer/: spec.md
openspec/specs/postgres-iam-client/: spec.md
scripts/: local-dev.sh
src/aws_connectivity_test/: __init__.py  config.py  exceptions.py  kafka_consumer.py  kafka_producer.py  logging_config.py  main.py  openai_client.py  opensearch_client.py  orchestrator.py  postgres_client.py  redis_client.py
tests/: __init__.py  conftest.py  test_config.py
