[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-connectivity-test"

version = "0.1.12"
version = "0.1.11"
description = "AWS connectivity test service for MSK, RDS, OpenSearch, and OpenAI with IAM authentication"
authors = [
    {name = "Rob Coward", email = "rob.coward@devops-consultants.co.uk"},
]
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",

    # Async Kafka consumer with MSK IAM auth
    "aiokafka>=0.10.0",
    "aws-msk-iam-sasl-signer-python>=1.0.0",

    # OpenAI client for embeddings
    "openai>=1.10.0",

    # OpenSearch client with AWS auth
    "opensearch-py>=2.4.0",
    "requests-aws4auth>=1.2.3",
    "aiohttp>=3.9.0",

    # Async PostgreSQL with IAM auth
    "asyncpg>=0.29.0",

    # AWS SDK for IAM authentication
    "boto3>=1.34.0",

    # Configuration and logging
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "aiohttp.*",
    "aws_msk_iam_sasl_signer.*",
    "opensearchpy.*",
    "requests_aws4auth.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.isort]
profile = "black"
line_length = 88
